etc/docker/kubernetes/dockercoins.yaml
################################################################################
#      Copyright (C) 2020        Sebastian Francisco Colomar Bauza             #
#      SPDX-License-Identifier:  GPL-2.0-only                                  #
################################################################################
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: rng
spec:
  selector:
    matchLabels:
      service: rng
  template:
    metadata:
      labels:
        service: rng
    spec:
      containers:
      -
        image: secobau/dockercoins:rng-1.4
        name: rng
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hasher
spec:
  selector:
    matchLabels:
      service: hasher
  template:
    metadata:
      labels:
        service: hasher
    spec:
      containers:
      -
        image: secobau/dockercoins:hasher-1.4
        name: hasher
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  selector:
    matchLabels:
      service: redis
  template:
    metadata:
      labels:
        service: redis
    spec:
      containers:
      -
        image: redis
        name: redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webui
spec:
  selector:
    matchLabels:
      service: webui
  template:
    metadata:
      labels:
        service: webui
    spec:
      containers:
      -
        image: secobau/dockercoins:webui-1.4
        name: webui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
spec:
  selector:
    matchLabels:
      service: worker
  template:
    metadata:
      labels:
        service: worker
    spec:
      containers:
      -
        image: secobau/dockercoins:worker-1.5
        name: worker
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hasher
spec:
  podSelector:
    matchLabels:
      service: hasher
  ingress:
    -
      from:
        -
          podSelector:
            matchLabels:
              service: worker
      ports:
        -
          port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis
spec:
  podSelector:
    matchLabels:
      service: redis
  ingress:
    -
      from:
        -
          podSelector:
            matchLabels:
              service: webui
        -
          podSelector:
            matchLabels:
              service: worker
      ports:
        -
          port: 6379
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: rng
spec:
  podSelector:
    matchLabels:
      service: rng
  ingress:
    -
      from:
        -
          podSelector:
            matchLabels:
              service: worker
      ports:
        -
          port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: worker
spec:
  podSelector:
    matchLabels:
      service: worker
  policyTypes:
  - Ingress
---
apiVersion: v1
kind: Service
metadata:
  name: hasher
spec:
  ports:
  -
    port: 8080
  selector:
    service: hasher
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  ports:
  -
    port: 6379
  selector:
    service: redis
---
apiVersion: v1
kind: Service
metadata:
  name: rng
spec:
  ports:
  -
    port: 8080
  selector:
    service: rng
---
apiVersion: v1
kind: Service
metadata:
  name: webui
spec:
  ports:
  -
    port: 8080
  selector:
    service: webui
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: dockercoins
spec:
  to:
    kind: Service
    name: webui
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
################################################################################
